--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,12 @@
 			</plugin>
 
 			<plugin>
+    				<groupId>org.apache.maven.plugins</groupId>
+    				<artifactId>maven-war-plugin</artifactId>
+  				<version>3.3.1</version>
+			</plugin>
+			
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-eclipse-plugin</artifactId>
 				<version>2.9</version>
