--- a/mavenwebappdeployment.yaml
+++ b/mavenwebappdeployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: mavenwebappcontainer
-          image: siddarth71/mavenweb:latest
+          image: siddarth71/webapp:v1
           ports:
             - containerPort: 8080
           resources:
